Add git buttons

--- a/index.html
+++ b/index.html
@@ -17,5 +17,22 @@
         <audio id="myAudio" autoplay>
         <source src="img/kkaudio.mp3" type="audio/mp3">
         </audio>
+        <footer>
+
+            <h4>Pull requests are welcome! <br/><a href="https://github.com/christianstain/Velocity_KrabbyPatty" target="_blank">Visit the repo</a></h4>
+
+            <center>
+
+                <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch"
+              allowtransparency="true" frameborder="0" scrolling="0" width="55" height="20"></iframe>
+
+                    <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork"
+              allowtransparency="true" frameborder="0" scrolling="0" width="56" height="20"></iframe>
+
+                    <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&type=follow"
+              allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+
+            </center>
+        </footer>
     </body>
     </html>
