--- a/index.html
+++ b/index.html
@@ -12,27 +12,22 @@
         <script type="text/javascript" src="js/myjs.js"></script>
     </head>
     <body>
-        <img class="centrar" src="img/bb.jpg"/>
+        <img class="centrar" id="background" src="img/bb.jpg"/>
         <img id = "burguer" class="centrar" src="img/Krabby_Patty.png"/>
         <audio id="myAudio" autoplay>
         <source src="img/kkaudio.mp3" type="audio/mp3">
         </audio>
-        <footer>
 
             <h4>Pull requests are welcome! <br/><a href="https://github.com/christianstain/Velocity_KrabbyPatty" target="_blank">Visit the repo</a></h4>
 
             <center>
 
-                <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch"
-              allowtransparency="true" frameborder="0" scrolling="0" width="55" height="20"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 
-                    <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork"
-              allowtransparency="true" frameborder="0" scrolling="0" width="56" height="20"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
 
-                    <iframe src="http://ghbtns.com/github-btn.html?user=christianstain&type=follow"
-              allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
 
             </center>
-        </footer>
     </body>
     </html>
