Add burger icon

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <!--Autor: Christian Stain-->
         <meta charset="utf-8">
+        <meta name="author" content="Christian Mancha">
         <title>Krabby Patty!</title>
+        <link rel="shortcut icon" href="img/burger.ico"/>
         <!-- styles -->
         <link href="css/mycss.css" rel="stylesheet">
         <!-- Scripts -->
@@ -20,7 +21,6 @@
         <!--Git buttons-->
         <footer>
             <center>
-
                 <h4>Pull requests are welcome!<br/><a href="https://github.com/christianstain/Velocity_KrabbyPatty" target="_blank">Visit the repo</a></h4>
                 <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
                 <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
