Change author name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Christian Mancha">
+        <meta name="author" content="ChristianStain">
         <title>Krabby Patty!</title>
         <link rel="shortcut icon" href="img/burger.ico"/>
         <!-- styles -->
