--- a/index.html
+++ b/index.html
@@ -2,20 +2,30 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Taller VelocityJs</title>
+        <meta name="author" content="ChristianStain">
+        <title>Krabby Patty!</title>
+        <link rel="shortcut icon" href="img/burger.ico"/>
         <!-- styles -->
         <link href="css/mycss.css" rel="stylesheet">
         <!-- Scripts -->
         <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
         <script type="text/javascript" src="js/velocity.min.js"></script>
-        <script type="text/javascript" src="js/velocity.ui.min.js"></script>
         <script type="text/javascript" src="js/myjs.js"></script>
     </head>
     <body>
-        <img class="centrar" src="img/bb.jpg"/>
+        <!--Background Burguer and Audio-->
+        <img class="centrar" id="background" src="img/bb.jpg"/>
         <img id = "burguer" class="centrar" src="img/Krabby_Patty.png"/>
-        <audio id="myAudio" autoplay>
-        <source src="img/kkaudio.mp3" type="audio/mp3">
-        </audio>
+        <audio id="myAudio" autoplay><source src="img/kkaudio.mp3" type="audio/mp3"></audio>
+
+        <!--Git buttons-->
+        <footer>
+            <center>
+                <h4>Pull requests are welcome!<br/><a href="https://github.com/christianstain/Velocity_KrabbyPatty" target="_blank">Visit the repo</a></h4>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
+            </center>
+        </footer>
     </body>
     </html>
