--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <footer>
             <center>
                 <h4>Pull requests are welcome!<br/><a href="https://github.com/christianstain/Velocity_KrabbyPatty" target="_blank">Visit the repo</a></h4>
+                <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
                 <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
                 <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&repo=Velocity_KrabbyPatty&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
                 <iframe src="https://ghbtns.com/github-btn.html?user=christianstain&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
